# hspec-shouldbe

./: README.markdown  hspec-shouldbe.cabal
example/: Spec.hs
src/Test/Hspec/: ShouldBe.hs
vim/plugin/: create-hspec.vim
