name:             hspec-shouldbe
synopsis:         Convenience wrapper and utilities for hspec
version:          0.0.0
stability:        experimental
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011, 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.6

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      hspec
    , test-shouldbe
  exposed-modules:
      Test.Hspec.ShouldBe
